--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-modeldriven></app-modeldriven>
-<app-templatedriven></app-templatedriven>
+<div class="container">
+  <app-modeldriven></app-modeldriven>
+  <app-templatedriven></app-templatedriven>
+</div>
